--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "homepage": "https://github.com/denisegiubilei/url-shortner-backend-nodejs#readme",
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.37"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
