--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
+    "shortid": "^2.2.16",
     "typeorm": "^0.2.37",
     "uuid": "^8.3.2"
   },
