--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "homepage": "https://github.com/denisegiubilei/url-shortner-backend-nodejs#readme",
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "eslint": "^7.32.0",
     "express": "^4.17.1",
