--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,12 @@
 {
-  "root": true,
+  "env": {
+    "browser": true
+  },
   "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
   "plugins": ["@typescript-eslint"],
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
-  ],
-  "rules": {
-    "@typescript-eslint/explicit-module-boundary-types": "off"
-  }
+  "rules": {}
 }
