--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "rimraf dist && tsc",
+    "start": "node dist/server.js",
     "dev": "ts-node src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "typeorm": "ts-node node_modules/typeorm/cli.js",
@@ -25,18 +27,20 @@
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "eslint": "^7.32.0",
     "express": "^4.17.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
     "shortid": "^2.2.16",
     "typeorm": "^0.2.37",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^16.7.10",
+    "@types/node": "^16.7.13",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   }
